Bug 804559 - Use correct rounding code instead of rolling our own. r=jrmuizel

Drew's First Law of Programming: If you write your own rounding code, you will
be wrong 100% of the time.